// Copyright 2020 o.klimenko aka ctizen
//
// Licensed under the Apache License, Version 2.0 (the "License"). You may not
// use this file except in compliance with the License. A copy of the License is
// located at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// or in the "license" file accompanying this file. This file is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
// express or implied. See the License for the specific language governing
// permissions and limitations under the License.

// protolint:disable REPEATED_FIELD_NAMES_PLURALIZED
syntax = "proto3";

package common;

service Hugin {
  rpc GetLastDay(GetLastDayPayload) returns (GetLastDayResponse);
  rpc GetLastMonth(GetLastMonthPayload) returns (GetLastMonthResponse);
  rpc GetLastYear(GetLastYearPayload) returns (GetLastYearResponse);
}

message GetLastDayPayload {}

message GetLastDayResponse {
  repeated HuginData data = 1;
}

message GetLastMonthPayload {}

message GetLastMonthResponse {
  repeated HuginData data = 1;
}

message GetLastYearPayload {}

message GetLastYearResponse {
  repeated HuginData data = 1;
}

message HuginData {
  string datetime = 1;
  int32 event_count = 2;
  int32 uniq_count = 3;
  string site_id = 4;
  string country = 5;
  string city = 6;
  string browser = 7;
  string os = 8;
  string device = 9;
  string screen = 10;
  string language = 11;
  string event_type = 12;
  string hostname = 13;
}
